# Tools

./: .gitignore  README.md  SETUP.md  classifier.py  classifier_spacy.py  cleaned.csv  cleaned_report.csv  cleaner.py  cli.py  demo.py  io_utils.py  make_sample.py  ml-testing-validation.bundle  pyproject.toml  run_pipeline.py  synthetic_generator_classification.py  synthetic_generator_clustering.py  synthetic_generator_regression.py
config/: text_singleclass.yaml
content/: base.py
content/audio/: adapter.py
content/image/: adapter.py
content/mixed/: adapter.py
content/text/: adapter.py
core/: active_learning.py  aggregator.py  metrics.py  pipeline.py  registry.py  router.py  schema.py  store.py
feedback/: collector.py  retrainer.py
ingestion/: base.py
labelers/: base.py  classifier_labeler.py  ensemble.py  llm_labeler.py  rules_labeler.py
review/: gold_injection.py  queue.py
tasks/: base.py  bbox.py  multi_label.py  ranking.py  single_class.py  spans.py
tests/: test_pipeline.py  test_tasks.py
